--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <button class="button download-btn">Скачать резюме</button>
                     </div>
                     <div class="about__avatar">
-                        <img src="img/photo.png" alt="Автар" class="about__img">
+                        <img src="img/John.png" alt="Автар" class="about__img">
                     </div>
                 </div>
             </section>
