--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </header>
         <main class="main">
             <section class="about">
-                <div class="container">
+                <div class="container about__container">
                     <div class="about__info">
                         <h1 class="title about__title">
                             Привет, я Джон, <br>
