--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <section class="recent-posts">
                 <div class="container">
                     <div class="recent-posts__top">
-                        <div class="recent-posts__title">Recent posts</div>
+                        <div class="title-category recent-posts__title">Recent posts</div>
                         <a href="#" class="recent-posts__link">View All</a>
                     </div>
                     <div class="recent-posts__articles">
@@ -82,6 +82,64 @@
                             <div class="recent-posts__text">Amet minim mollit non deserunt ullamco est sit aliqua dolor
                                 do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam
                                 consequat sunt nostrud amet.</div>
+                        </article>
+                    </div>
+                </div>
+            </section>
+            <section class="featured">
+                <div class="container">
+                    <div class="title-category">Featured works</div>
+                    <div class="featured__works">
+                        <article class="work">
+                            <div class="work__img-wrap">
+                                <img src="" alt="" class="work__img">
+                            </div>
+                            <div class="work__info">
+                                <div class="work__title">Designing Dashboards</div>
+                                <div class="work__date-block">
+                                    <div class="work__date">2020</div>
+                                    <div class="work__category">Dashboard</div>
+                                </div>
+                                <div class="work__text">
+                                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
+                                    officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud
+                                    amet.
+                                </div>
+                            </div>
+                        </article>
+                        <article class="work">
+                            <div class="work__img-wrap">
+                                <img src="" alt="" class="work__img">
+                            </div>
+                            <div class="work__info">
+                                <div class="work__title">Designing Dashboards</div>
+                                <div class="work__date-block">
+                                    <div class="work__date">2020</div>
+                                    <div class="work__category">Dashboard</div>
+                                </div>
+                                <div class="work__text">
+                                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
+                                    officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud
+                                    amet.
+                                </div>
+                            </div>
+                        </article>
+                        <article class="work">
+                            <div class="work__img-wrap">
+                                <img src="" alt="" class="work__img">
+                            </div>
+                            <div class="work__info">
+                                <div class="work__title">Designing Dashboards</div>
+                                <div class="work__date-block">
+                                    <div class="work__date">2020</div>
+                                    <div class="work__category">Dashboard</div>
+                                </div>
+                                <div class="work__text">
+                                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
+                                    officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud
+                                    amet.
+                                </div>
+                            </div>
                         </article>
                     </div>
                 </div>
