Адаптив recent-posts

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                         </li>
                     </ul>
                 </nav>
+                <div class="header-burger">
+                    <div class="header-burger__el"></div>
+                </div>
             </div>
         </header>
         <main class="main">
