--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
                 </div>
             </section>
             <section class="featured">
-                <div class="container">
+                <div class="container featured__container">
                     <div class="title-category">Featured works</div>
                     <div class="featured__works">
                         <article class="work">
                             <div class="work__img-wrap">
-                                <img src="" alt="" class="work__img">
+                                <img src="img/works/dashboard.png" alt="" class="work__img">
                             </div>
                             <div class="work__info">
                                 <div class="work__title">Designing Dashboards</div>
@@ -112,7 +112,7 @@
                         </article>
                         <article class="work">
                             <div class="work__img-wrap">
-                                <img src="" alt="" class="work__img">
+                                <img src="img/works/dashboard.png" alt="" class="work__img">
                             </div>
                             <div class="work__info">
                                 <div class="work__title">Designing Dashboards</div>
@@ -129,7 +129,7 @@
                         </article>
                         <article class="work">
                             <div class="work__img-wrap">
-                                <img src="" alt="" class="work__img">
+                                <img src="img/works/dashboard.png" alt="" class="work__img">
                             </div>
                             <div class="work__info">
                                 <div class="work__title">Designing Dashboards</div>
